-
Bug
-
Resolution: Done
-
P2: Important
-
6.3.1
-
-
52659c494d (qt/qtdeclarative/dev) 52659c494d (qt/tqtc-qtdeclarative/dev)
These warnings in the Qt QML and Qt GUI modules are triggered as a result of including qquickpointerhandler_p.h (for the same reason as QTBUG-104325 )
/Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qqmlcontext_p.h:89:61: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int' [-Wshorten-64-to-32] int numPropertyValues() const { return m_propertyValues.count(); } ~~~~~~ ~~~~~~~~~~~~~~~~~^~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qv4staticvalue_p.h:206:17: warning: implicit conversion loses integer precision: 'quint64' (aka 'unsigned long long') to 'int' [-Wshorten-64-to-32] int t = quickType(); ~ ^~~~~~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qv4mmdefs_p.h:217:27: warning: implicit conversion loses integer precision: 'long' to 'uint' (aka 'unsigned int') [-Wshorten-64-to-32] uint index = this - c->realBase(); ~~~~~ ~~~~~^~~~~~~~~~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qv4mmdefs_p.h:222:27: warning: implicit conversion loses integer precision: 'long' to 'uint' (aka 'unsigned int') [-Wshorten-64-to-32] uint index = this - c->realBase(); ~~~~~ ~~~~~^~~~~~~~~~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qv4mmdefs_p.h:227:27: warning: implicit conversion loses integer precision: 'long' to 'uint' (aka 'unsigned int') [-Wshorten-64-to-32] uint index = this - c->realBase(); ~~~~~ ~~~~~^~~~~~~~~~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qv4mmdefs_p.h:246:27: warning: implicit conversion loses integer precision: 'long' to 'uint' (aka 'unsigned int') [-Wshorten-64-to-32] uint index = this - c->realBase(); ~~~~~ ~~~~~^~~~~~~~~~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qv4string_p.h:169:54: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int' [-Wshorten-64-to-32] return subtype < StringType_AddedString ? text().size : static_cast<const ComplexString *>(this)->len; ~~~~~~ ~~~~~~~^~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qhashedstring_p.h:239:41: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int' [-Wshorten-64-to-32] : m_data(str.constData()), m_length(str.length()), m_hash(0) ~~~~~^~~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qhashedstring_p.h:244:41: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int' [-Wshorten-64-to-32] : m_data(str.constData()), m_length(str.length()), m_hash(0) ~~~~~^~~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qhashedstring_p.h:259:47: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int' [-Wshorten-64-to-32] : m_data(string.constData()), m_length(string.length()), m_hash(string.m_hash) ~~~~~~~~^~~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qhashedstring_p.h:463:38: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int' [-Wshorten-64-to-32] m_hash = stringHash(constData(), length()); ~~~~~~~~~~ ^~~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qstringhash_p.h:77:18: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'qint32' (aka 'int') [-Wshorten-64-to-32] : length(key.length()), hash(key.hash()), symbolId(0) ~~~~~^~~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qstringhash_p.h:271:113: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int' [-Wshorten-64-to-32] static HashedForm<QStringView>::Type hashedString(QStringView s) { return QHashedStringRef(s.constData(), s.size());} ~~~~~~~~~~~~~~~~ ~~^~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qstringhash_p.h:277:120: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int' [-Wshorten-64-to-32] static HashedForm<QLatin1String>::Type hashedString(const QLatin1String &s) { return QHashedCStringRef(s.data(), s.size()); } ~~~~~~~~~~~~~~~~~ ~~^~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qqmlpropertycache_p.h:452:36: warning: implicit conversion loses integer precision: 'long long' to 'int' [-Wshorten-64-to-32] return propertyIndexCacheStart + propertyIndexCache.count(); ~~~~~~ ~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qqmlpropertycache_p.h:462:34: warning: implicit conversion loses integer precision: 'long long' to 'int' [-Wshorten-64-to-32] return methodIndexCacheStart + methodIndexCache.count(); ~~~~~~ ~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qqmlpropertycache_p.h:472:41: warning: implicit conversion loses integer precision: 'long long' to 'int' [-Wshorten-64-to-32] return signalHandlerIndexCacheStart + signalHandlerIndexCache.count(); ~~~~~~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qqmlpropertycache_p.h:482:22: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int' [-Wshorten-64-to-32] return enumCache.count(); ~~~~~~ ~~~~~~~~~~^~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qv4compileddata_p.h:226:76: warning: implicit conversion loses integer precision: 'unsigned long long' to 'int' [-Wshorten-64-to-32] return (sizeof(String) + (str.length() + 1) * sizeof(quint16) + 7) & ~0x7; ~~~~~~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qqmlpropertycachevector_p.h:79:37: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int' [-Wshorten-64-to-32] int count() const { return data.count(); } ~~~~~~ ~~~~~^~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtQml/6.3.0/QtQml/private/qv4object_p.h:507:16: warning: implicit conversion loses integer precision: 'qint64' (aka 'long long') to 'uint' (aka 'unsigned int') [-Wshorten-64-to-32] uint idx = getLength(); ~~~ ^~~~~~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtGui/6.3.0/QtGui/private/qfixed_p.h:67:38: warning: implicit conversion loses integer precision: 'long' to 'int' [-Wshorten-64-to-32] constexpr QFixed(long i) : val(i * 64) {} ~~~^~~~ /Users/dev/Qt/6.3.0/ios/include/QtGui/6.3.0/QtGui/private/qfixed_p.h:69:41: warning: implicit conversion loses integer precision: 'long' to 'int' [-Wshorten-64-to-32] QFixed &operator=(long i) { val = i * 64; return *this; } ~ ~~^~~~ /Users/dev/Qt/6.3.0/ios/include/QtGui/6.3.0/QtGui/private/qtextformat_p.h:93:52: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int' [-Wshorten-64-to-32] inline int numFormats() const { return formats.count(); } ~~~~~~ ~~~~~~~~^~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtGui/6.3.0/QtGui/private/qtextdocument_p.h:218:66: warning: implicit conversion loses integer precision: 'QTypeTraits::Promoted<long long, int>' (aka 'long long') to 'int' [-Wshorten-64-to-32] inline int availableRedoSteps() const { return undoEnabled ? qMax(undoStack.size() - undoState - 1, 0) : 0; } ~~~~~~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtGui/6.3.0/QtGui/private/qtextengine_p.h:473:115: warning: implicit conversion loses integer precision: 'long long' to 'int' [-Wshorten-64-to-32] return (item < layoutData->items.size() ? layoutData->items[item].position : layoutData->string.length()) - from; ~~~~~~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtGui/6.3.0/QtGui/private/qtextengine_p.h:480:38: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int' [-Wshorten-64-to-32] end = layoutData->string.length(); ~ ~~~~~~~~~~~~~~~~~~~^~~~~~~~ /Users/dev/Qt/6.3.0/ios/include/QtGui/6.3.0/QtGui/private/qfontengine_p.h:497:72: warning: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int' [-Wshorten-64-to-32] inline int fallbackFamilyCount() const { return m_fallbackFamilies.size(); } ~~~~~~ ~~~~~~~~~~~~~~~~~~~^~~~~~
- relates to
-
QTBUG-86216 qstring.h, qstringbuilder.h: implicit conversion loses integer precision: 'qsizetype' (aka 'long long') to 'int'
-
- Closed
-
| For Gerrit Dashboard: QTBUG-105055 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 438668,2 | QHashedStringRef: assert that strings have at most INT_MAX size | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 438669,2 | qqmlpropertycache_p.h: Explicitly cast size to int | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 438670,2 | Object::push_back: throw exception on overflow | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 438671,2 | Avoid -Wshorten-64-to-32 warnings in a few places | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 438681,7 | qquickpointerhandler_p.h: Clean up includes | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |