Avoid -Wshorten-64-to-32 warnings in a few places

...by explictily casting to int. Add a few comments explaining why we
can get at most INT_MAX many elements, and add Q_ASSERTS to check that
the assumptions actually hold.

Task-number: QTBUG-105055
Change-Id: I1769318a9c04b51efe45fe0cae9fc0d93cfec45e
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>